// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Toggle defaultToggle 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Toggle__Group-f6l22k-0 dfPeJz"
    id="autosave"
    label="Auto save"
  >
    <input
      className="Toggle__Input-f6l22k-1 iVVGvY"
      id="autosave"
      label="Auto save"
      type="checkbox"
    />
    <label
      className="Toggle__Item-f6l22k-2 jklSmo"
      htmlFor="autosave"
    />
    <label
      className="Toggle__Label-f6l22k-3 fjqoMo"
      htmlFor="autosave"
    >
      Auto save
    </label>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle invertedToggle 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Box__BoxWrapper-jr1api-0 gsDhqA"
    data-testid={null}
  >
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
    >
      <div
        className="Toggle__Group-f6l22k-0 fdTRoC"
        id="autosave3"
        label="Auto save"
      >
        <input
          className="Toggle__Input-f6l22k-1 iVVGvY"
          id="autosave3"
          label="Auto save"
          type="checkbox"
        />
        <label
          className="Toggle__Item-f6l22k-2 fVtFEp"
          htmlFor="autosave3"
        />
        <label
          className="Toggle__Label-f6l22k-3 fjGgOK"
          htmlFor="autosave3"
        >
          Auto save
        </label>
      </div>
    </div>
    <div
      className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
    >
      <div
        className="Toggle__Group-f6l22k-0 fdTRoC"
        id="autosave4"
        label="Auto save"
      >
        <input
          className="Toggle__Input-f6l22k-1 iVVGvY"
          id="autosave4"
          label="Auto save"
          type="checkbox"
        />
        <label
          className="Toggle__Item-f6l22k-2 jklSmo"
          htmlFor="autosave4"
        />
        <label
          className="Toggle__Label-f6l22k-3 fjqoMo"
          htmlFor="autosave4"
        >
          Auto save
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Toggle smallToggle 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 ezPMxm"
  data-testid={null}
>
  <div
    className="Toggle__Group-f6l22k-0 dfPeJz"
    id="autosave2"
    label="Auto save"
  >
    <input
      className="Toggle__Input-f6l22k-1 iVVGvY"
      id="autosave2"
      label="Auto save"
      type="checkbox"
    />
    <label
      className="Toggle__Item-f6l22k-2 fVtFEp"
      htmlFor="autosave2"
    />
    <label
      className="Toggle__Label-f6l22k-3 fjGgOK"
      htmlFor="autosave2"
    >
      Auto save
    </label>
  </div>
</div>
`;

exports[`Storyshots Units/Toggle Default Toggle 1`] = `
<div
  className="Toggle__Group-f6l22k-0 dfPeJz"
  id="autosave"
  label="Auto save"
>
  <input
    className="Toggle__Input-f6l22k-1 iVVGvY"
    id="autosave"
    label="Auto save"
    type="checkbox"
  />
  <label
    className="Toggle__Item-f6l22k-2 jklSmo"
    htmlFor="autosave"
  />
  <label
    className="Toggle__Label-f6l22k-3 fjqoMo"
    htmlFor="autosave"
  >
    Auto save
  </label>
</div>
`;

exports[`Storyshots Units/Toggle Inverted Toggle 1`] = `
<div
  className="Box__BoxWrapper-jr1api-0 gsDhqA"
  data-testid={null}
>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
  >
    <div
      className="Toggle__Group-f6l22k-0 fdTRoC"
      id="autosave3"
      label="Auto save"
    >
      <input
        className="Toggle__Input-f6l22k-1 iVVGvY"
        id="autosave3"
        label="Auto save"
        type="checkbox"
      />
      <label
        className="Toggle__Item-f6l22k-2 fVtFEp"
        htmlFor="autosave3"
      />
      <label
        className="Toggle__Label-f6l22k-3 fjGgOK"
        htmlFor="autosave3"
      >
        Auto save
      </label>
    </div>
  </div>
  <div
    className="Spacer__SpacerBox-sc-1acikjz-0 fIajRC"
  >
    <div
      className="Toggle__Group-f6l22k-0 fdTRoC"
      id="autosave4"
      label="Auto save"
    >
      <input
        className="Toggle__Input-f6l22k-1 iVVGvY"
        id="autosave4"
        label="Auto save"
        type="checkbox"
      />
      <label
        className="Toggle__Item-f6l22k-2 jklSmo"
        htmlFor="autosave4"
      />
      <label
        className="Toggle__Label-f6l22k-3 fjqoMo"
        htmlFor="autosave4"
      >
        Auto save
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Units/Toggle Small Toggle 1`] = `
<div
  className="Toggle__Group-f6l22k-0 dfPeJz"
  id="autosave2"
  label="Auto save"
>
  <input
    className="Toggle__Input-f6l22k-1 iVVGvY"
    id="autosave2"
    label="Auto save"
    type="checkbox"
  />
  <label
    className="Toggle__Item-f6l22k-2 fVtFEp"
    htmlFor="autosave2"
  />
  <label
    className="Toggle__Label-f6l22k-3 fjGgOK"
    htmlFor="autosave2"
  >
    Auto save
  </label>
</div>
`;
